test/files/neg/t5544.check
Test_2.scala:2: error: value baz is not a member of object Api
  Api.baz
      ^
1 error
